fixed unaligned charts (#22165)

--- a/openmetadata-ui/src/main/resources/ui/src/components/DataInsight/data-insight-detail.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/DataInsight/data-insight-detail.less
@@ -40,6 +40,9 @@
   }
 }
 
+.data-insight-active-user .summary-card .ant-space-item {
+  max-width: 100%;
+}
 .ant-typography.data-insight-label-text {
   color: @label-color;
 }
